// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`conditions translation output for translateApplicationExitedCondition render with error 1`] = `
"Assert: Application has exited
  App is still running
"
`;

exports[`conditions translation output for translateApplicationExitedCondition render without errors 1`] = `
"Assert: Application has exited
"
`;

exports[`conditions translation output for translateCookieCondition existingSubject error 1`] = `
"Assert: Cookie
  ┌────────────────────┬─────────┐
  │ [32mcookie-name[0m cookie │ !exists │
  └────────────────────┴─────────┘
  Subject expected not to exist.
"
`;

exports[`conditions translation output for translateCookieCondition exprException error 1`] = `
"Assert: Cookie
  ┌───────────────────┬────────────┬─────────────┐
  │ [32mcookieName[0m cookie │ matches JS │ [32mcookieValue[0m │
  └───────────────────┴────────────┴─────────────┘
  Exception was thrown: \\"cookieValue is not defined\\".
"
`;

exports[`conditions translation output for translateCookieCondition missingSubject error 1`] = `
"Assert: Cookie
  ┌───────────────────────┬───┬─────────┐
  │ [32msuitest-cookie[0m cookie │ = │ [32msuitest[0m │
  └───────────────────────┴───┴─────────┘
  Subject does not exist.
"
`;

exports[`conditions translation output for translateCookieCondition plain cookie line 1`] = `
"Assert: Cookie
  ┌───────────────────────┬───┬─────────┐
  │ [32msuitest-cookie[0m cookie │ = │ [32msuitest[0m │
  └───────────────────────┴───┴─────────┘
"
`;

exports[`conditions translation output for translateCookieCondition queryFailed (value not matched) error 1`] = `
"Assert: Cookie
  ┌───────────────────────┬───┬─────────┐
  │ [32msuitest-cookie[0m cookie │ = │ [32msuitest[0m │
  └───────────────────────┴───┴─────────┘
  
  Failing checks:
  ~ compared value: some cookie value (expected)
    × cookie value: suitest (actual)

"
`;

exports[`conditions translation output for translateCookieCondition queryFailed match js failed 1`] = `
"Assert: Cookie
  ┌───────────────────────┬────────────┬────────────────────────────────────────────────┐
  │ [32msuitest-cookie[0m cookie │ matches JS │ [32mfunction somePredicate(val) {
	return false;
}[0m │
  └───────────────────────┴────────────┴────────────────────────────────────────────────┘
  Expected to match JS function:
  > function somePredicate(val) {
  > 	return false;
  > }

"
`;

exports[`conditions translation output for translateCurrentLocationCondition 1`] = `
"Assert: Current location
  ┌──────────────────┬──────────┬─────────────────┐
  │ Current location │ contains │ [32mhttp://some.url[0m │
  └──────────────────┴──────────┴─────────────────┘
"
`;

exports[`conditions translation output for translateCurrentLocationCondition 2`] = `
"Assert: Current location
  ┌──────────────────┬──────────┬─────────────────┐
  │ Current location │ contains │ [32mhttp://some.url[0m │
  └──────────────────┴──────────┴─────────────────┘
  
  Failing checks:
    ~ compared value: http://some.url (expected)
  × current location: http://file.suite.st/sampleapp_staging/index-hbbtv.html (act
                      ual)

"
`;

exports[`conditions translation output for translateCurrentLocationCondition 3`] = `
"Assert: Current location
  ┌──────────────────┬────────────┬─────────────────────────────────────────────────────┐
  │ Current location │ matches JS │ [32mfunction somePredicate(location) {
	return false;
}[0m │
  └──────────────────┴────────────┴─────────────────────────────────────────────────────┘
  Expected to match JS function:
  > function somePredicate(location) {
  > 	return false;
  > }

"
`;

exports[`conditions translation output for translateCurrentLocationCondition 4`] = `
"Assert: Current location
  ┌──────────────────┬────────────┬───────────┐
  │ Current location │ matches JS │ [32msomething[0m │
  └──────────────────┴────────────┴───────────┘
  Exception was thrown: \\"something is not defined\\".
"
`;

exports[`conditions translation output for translateCurrentLocationCondition 5`] = `
"Assert: Current location
  ┌──────────────────┬──────────┬─────────────────┐
  │ Current location │ contains │ [32mhttp://some.url[0m │
  └──────────────────┴──────────┴─────────────────┘
  Wrong app ID detected
"
`;

exports[`conditions translation output for translateElementCondition queryFailed element visible fail 1`] = `
"Assert: [32mMy element[0m is visible
  Query failed.
"
`;

exports[`conditions translation output for translateElementCondition queryFailed existingSubject 1`] = `
"Assert: [32mElement 1[0m does not exist
  Subject expected not to exist.
"
`;

exports[`conditions translation output for translateElementCondition queryFailed expression errors 1`] = `
"Assert: Unknown element ([36munknown-id[0m) properties
  ┌──────────────────┬───┬─────────────────────────────────────┐
  │ background color │ = │ [32mrgba(0, 0, 0, 0)[0m           │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ border color     │ = │ [32mrgb(255, 255, 255)[0m         │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ border style     │ = │ [32mnone[0m                       │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ border width     │ = │ [32m0px[0m                        │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ class            │ = │ [32mcomponentcontainer container widget[0m │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ height           │ = │ [32m720[0m                        │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ href             │ = │                                     │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ id               │ = │ [32mmaincontainer[0m              │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ image            │ = │                                     │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ left             │ = │ [32m0[0m                          │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ opacity          │ = │ [32m1[0m                          │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ text color       │ = │ [32mrgba(255, 255, 255, 1)[0m     │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ text             │ = │                                     │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ top              │ = │ [32m0[0m                          │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ width            │ = │ [32m1280[0m                       │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ z-index          │ < │ [32m0[0m                          │
  ├──────────────────┼───┼─────────────────────────────────────┤
  │ visibility       │ = │ [32minvisible[0m                  │
  └──────────────────┴───┴─────────────────────────────────────┘
  
  Failing checks:
       ~ class: componentcontainer container widget (expected)
       × class: active componentcontainer container widget (actual)
        ~ text: [EMPTY STRING] (expected)
        × text: WatchMe New Pictures Videos Music More All Files Candies Che
                rries strawberry-cake Big Buck Bunny (trailer).mp4 boiled-sw
                eets.jpg cakes_tarts_desserts_sweets_berries_strawberries_bl
                ackberries_blueberries_currants_75280_1400x1050.jpg DSC_0159
                .JPG 7 Images 1 folder folder Cherries strawberry-cake boile
                d-sweets.jpg cakes_tarts_desserts_sweets_berries_strawberrie
                s_blackberries_blueberries_currants_75280_1400x1050.jpg DSC_
                0159.JPG 0 Music 6 Videos SINTEL.mp4 Big Buck Bunny (trailer
                ).mp4 (actual)
      ~ zIndex: 0 (expected)
      × zIndex: 0 (actual)
  ~ visibility: invisible (expected)
  × visibility: property missing (actual)

"
`;

exports[`conditions translation output for translateElementCondition queryFailed expression errors 2`] = `
"Assert: Unknown element ([36munknown-id[0m) properties
  ┌──────────────────┬──────────┬─────────────────────────────────────┐
  │ background color │ =        │ [32mrgba(0, 0, 0, 0)[0m           │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ border color     │ =        │ [32mrgb(255, 255, 255)[0m         │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ border style     │ =        │ [32mnone[0m                       │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ border width     │ =        │ [32m0px[0m                        │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ class            │ =        │ [32mcomponentcontainer container widget[0m │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ height           │ =        │ [32m720[0m                        │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ href             │ =        │                                     │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ id               │ =        │ [32mmaincontainer[0m              │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ image            │ =        │                                     │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ left             │ =        │ [32m0[0m                          │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ opacity          │ =        │ [32m1[0m                          │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ text color       │ =        │ [32mrgba(255, 255, 255, 1)[0m     │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ text             │ =        │                                     │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ top              │ =        │ [32m0[0m                          │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ width            │ =        │ [32m1280[0m                       │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ z-index          │ <        │ [32m0[0m                          │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ visibility       │ =        │ [32minvisible[0m                  │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ z-index          │ contains │ [32m0[0m                          │
  ├──────────────────┼──────────┼─────────────────────────────────────┤
  │ text color       │ =        │ [32mrgba(255, dddd, 255, 1)[0m    │
  └──────────────────┴──────────┴─────────────────────────────────────┘
  
  Failing checks:
       ~ class: componentcontainer container widget (expected)
       × class: active componentcontainer container widget (actual)
        ~ text: [EMPTY STRING] (expected)
        × text: WatchMe New Pictures Videos Music More All Files Candies Che
                rries strawberry-cake Big Buck Bunny (trailer).mp4 boiled-sw
                eets.jpg cakes_tarts_desserts_sweets_berries_strawberries_bl
                ackberries_blueberries_currants_75280_1400x1050.jpg DSC_0159
                .JPG 7 Images 1 folder folder Cherries strawberry-cake boile
                d-sweets.jpg cakes_tarts_desserts_sweets_berries_strawberrie
                s_blackberries_blueberries_currants_75280_1400x1050.jpg DSC_
                0159.JPG 0 Music 6 Videos SINTEL.mp4 Big Buck Bunny (trailer
                ).mp4 (actual)
      ~ zIndex: 0 (expected)
      × zIndex: 0 (actual)
  ~ visibility: invisible (expected)
  × visibility: property missing (actual)
      ~ zIndex: 0 (expected)
      × zIndex: wrong format (actual)
       ~ color: rgba(255, dddd, 255, 1) (expected)
       × color: wrong format (actual)

"
`;

exports[`conditions translation output for translateElementCondition queryFailed handle error because of js error for match js 1`] = `
"Assert: [36m{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}[0m matches JavaScript

  JavaScript matcher
    > function(((testSubject) {
    > 	console.log(testSubject);
    > 	return true;
    > }
  Exception was thrown: \\"Unexpected token '('\\".
"
`;

exports[`conditions translation output for translateElementCondition queryFailed match js fail 1`] = `
"Assert: [36m{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}[0m matches JavaScript

  JavaScript matcher
    > someJS();
  Expected to match JS function:
  > someJS();

"
`;

exports[`conditions translation output for translateElementCondition queryFailed missingSubject 1`] = `
"Assert: [32mElement 1[0m exists
  Subject does not exist.
"
`;

exports[`conditions translation output for translateElementCondition translate "element ... does not exist" 1`] = `
"Assert: [32mElement 1[0m does not exist
"
`;

exports[`conditions translation output for translateElementCondition translate "element ... exist" 1`] = `
"Assert: [32mElement 1[0m exists
"
`;

exports[`conditions translation output for translateElementCondition translate "element ... is visible" 1`] = `
"Assert: [32mMy element[0m is visible
"
`;

exports[`conditions translation output for translateElementCondition translate "element matches JS with vars" 1`] = `
"Assert: [36m{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}[0m matches JavaScript

  JavaScript matcher
    > someJS(\\"123\\");

  With variables
    > someJS(\\"<%var1%>\\");
"
`;

exports[`conditions translation output for translateElementCondition translate "element matches JS" 1`] = `
"Assert: [36m{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}[0m matches JavaScript

  JavaScript matcher
    > someJS();
"
`;

exports[`conditions translation output for translateElementCondition translate "element properties" 1`] = `
"Assert: Unknown element ([36munknown-id[0m) properties
  ┌────────────────┬──────────┬────────────────────────────┐
  │ video position │ >=       │ [32m123[0m               │
  ├────────────────┼──────────┼────────────────────────────┤
  │ height         │ =        │ [32m123 ± 3v5[0m ([36m123 ± <%var3%>[0m) │
  ├────────────────┼──────────┼────────────────────────────┤
  │ text           │ contains │ [32mexpected text[0m     │
  └────────────────┴──────────┴────────────────────────────┘
"
`;

exports[`conditions translation output for translateElementCondition translate invalidRepositoryReference general error 1`] = `
"Assert: Unknown element ([36msome-id[0m) exists
  Element Unknown element ([36msome-id[0m) was not found in repository.
"
`;

exports[`conditions translation output for translateElementCondition translate invalidRepositoryReference notExistingElement message code 1`] = `
"Assert: Unknown element ([36msome-id[0m) exists
  Element Unknown element ([36msome-id[0m) was not found in repository.
"
`;

exports[`conditions translation output for translateElementCondition translate invalidRepositoryReference notExistingPlatform message code 1`] = `
"Assert: [32mElement 1[0m exists
  Element [32mElement 1[0m is not defined for selected platform
"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition plain rendering 1`] = `
"Assert: JavaScript expression

  JavaScript expression
    > someJS()
  ┌───────────────────┬───┬────────────────┐
  │ Expression result │ = │ [32mreturned value[0m │
  └───────────────────┴───┴────────────────┘
"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition plain rendering 2`] = `
"Assert: JavaScript expression

  JavaScript expression
    > someJS(\\"123\\")

  With variables
    > someJS(\\"<%var1%>\\")
  ┌───────────────────┬───┬────────────────┐
  │ Expression result │ = │ [32mreturned value[0m │
  └───────────────────┴───┴────────────────┘
"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition translate error when js expression are not specified 1`] = `
"Assert: JavaScript expression
  [NOT SPECIFIED]
  ┌───────────────────┬───┬─────────────────┐
  │ Expression result │ = │ [NOT SPECIFIED] │
  └───────────────────┴───┴─────────────────┘
  Internal error occurred
"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition translate error when js expression are not specified 2`] = `
"Assert: JavaScript expression
  [NOT SPECIFIED]
  ┌───────────────────┬───┬───┐
  │ Expression result │ = │ [32m1[0m │
  └───────────────────┴───┴───┘
  Internal error occurred
"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition translate error when js expression specified but comparing value is empty 1`] = `
"Assert: JavaScript expression

  JavaScript expression
    > 1
  ┌───────────────────┬───┬─────────────────┐
  │ Expression result │ = │ [NOT SPECIFIED] │
  └───────────────────┴───┴─────────────────┘
  Test command received invalid input.
"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition translate queryFailed errors actual/expected values specified 1`] = `
"Assert: JavaScript expression

  JavaScript expression
    > 1 + 1
  ┌───────────────────┬───┬───┐
  │ Expression result │ = │ [32m3[0m │
  └───────────────────┴───┴───┘
  
  Failing checks:
  ~ compared value: 3 (expected)
  × returned value: 2 (actual)

"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition translate queryFailed errors actual/expected values specified 2`] = `
"Assert: JavaScript expression

  JavaScript expression
    > 120 + 3
  ┌───────────────────┬────────────┬────┐
  │ Expression result │ ! contains │ [32m12[0m │
  └───────────────────┴────────────┴────┘
  
  Failing checks:
  ~ compared value: 12 (expected)
  × returned value: 123 (actual)

"
`;

exports[`conditions translation output for translateJavaScriptExpressionCondition translate queryFailed errors javascript error 1`] = `
"Assert: JavaScript expression

  JavaScript expression
    > function test() { return 123
  ┌───────────────────┬───┬─────┐
  │ Expression result │ = │ [32m123[0m │
  └───────────────────┴───┴─────┘
  Exception was thrown: \\"Unexpected end of input\\".
"
`;

exports[`conditions translation output for translateNetworkRequestCondition render errors request/response headers not matched 1`] = `
"Assert: Network request was made
           Exact URL: [32mhttp://suite.st/123[0m ([36mhttp://suite.st/<%var1%>[0m)
  Previously matched: [32mYes[0m

  Network request properties
  ┌──────────────────────────────────────────┬────┬──────────────────────────────────────────────────────────────┐
  │ Request method                           │ != │ [32mGET[0m                                                 │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mAccept[0m           │ =  │ [32mtext/html,application/xhtml+xml,application/xml;q=0.9,image/[0m │
  │                                          │    │ [32mwebp,image/apng,*/*;q=0.8,application/signed-exchange;v=b3;q[0m │
  │                                          │    │ [32m=0.9[0m                                                │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mAccept-Language[0m  │ =  │ [32men-US,en;q=0.9[0m                                      │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mContent-Length[0m   │ =  │ [32m0[0m                                                   │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mHost[0m             │ =  │ [32mfile.suite.st[0m                                       │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mIf-Modified-Since[0m │ =  │ [32mFri, 25 Jan 2019 16:33:31 GMT[0m                       │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mIf-None-Match[0m    │ =  │ [32mW/\\"5c4b3a5b-19e2\\"[0m                                   │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mUpgrade-Insecure-Requests[0m │ =  │ [32m1[0m                                                   │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mUser-Agent[0m       │ =  │ [32mMozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36[0m │
  │                                          │    │ [32m (KHTML, like Gecko) Chrome/81.0.4044.122 Safari/537.36[0m │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request header [32mVia[0m              │ =  │ [32m1.1 suitestify[0m                                      │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Request body                             │ =  │ [32masdfs[0m                                               │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response status                          │ =  │ [32m303[0m                                                 │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mCache-Control[0m   │ =  │ [32mmax-age=300[0m                                         │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mConnection[0m      │ =  │ [32mkeep-alive[0m                                          │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mDate[0m            │ =  │ [32mMon, 27 Apr 2020 13:08:59 GMT[0m                       │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mEtag[0m            │ =  │ [32m\\"5c4b3a5b-19e2\\"[0m                                     │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mExpires[0m         │ =  │ [32mMon, 27 Apr 2020 13:13:59 GMT[0m                       │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mLast-Modified[0m   │ =  │ [32mFri, 25 Jan 2019 16:33:31 GMT[0m                       │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response header [32mServer[0m          │ =  │ [32mnginx[0m                                               │
  ├──────────────────────────────────────────┼────┼──────────────────────────────────────────────────────────────┤
  │ Response body                            │ =  │ [32masdfasdddddd[0m                                        │
  └──────────────────────────────────────────┴────┴──────────────────────────────────────────────────────────────┘
  
  Failing checks:
                        ~ request body: asdfs (expected)
                        × request body: [EMPTY STRING] (actual)
                      ~ request method: GET (expected)
                      × request method: GET (actual)
  ~ request header \\"If-Modified-Since\\": Fri, 25 Jan 2019 16:33:31 GMT (expected)
  × request header \\"If-Modified-Since\\": not found (actual)
      ~ request header \\"If-None-Match\\": W/\\"5c4b3a5b-19e2\\" (expected)
      × request header \\"If-None-Match\\": not found (actual)
                       ~ response body: asdfasdddddd (expected)
                       × response body: <!DOCTYPE html PUBLIC \\"-//HbbTV//1.1.1//EN\\" \\"http://www.hbbt
                                        v.org/dtd/HbbTV-1.1.1.dtd\\">
<html xmlns=\\"http://www.w3.org/1
                                        999/xhtml\\">
<head>
    <title>HbbTv App</title>
    <link re
                                        l=\\"stylesheet\\" href=\\"css/base.css\\" />
</head>
<body>
    <di
                                        v id=\\"content\\"></div>
</body>
</html> (actual)
                     ~ response status: 303 (expected)
                     × response status: 200 (actual)
              ~ response header \\"Date\\": Mon, 27 Apr 2020 13:08:59 GMT (expected)
              × response header \\"Date\\": Tue, 28 Apr 2020 09:58:10 GMT (actual)
           ~ response header \\"Expires\\": Mon, 27 Apr 2020 13:13:59 GMT (expected)
           × response header \\"Expires\\": Tue, 28 Apr 2020 10:03:10 GMT (actual)

"
`;

exports[`conditions translation output for translateNetworkRequestCondition render errors syntax error when status compare type is "CONTAINS" 1`] = `
"Assert: Network request was made
           Exact URL: [32mhttp://suite.st/123[0m ([36mhttp://suite.st/<%var1%>[0m)
  Previously matched: [32mYes[0m

  Network request properties
  ┌─────────────────┬──────────┬─────┐
  │ Response status │ contains │ [32m303[0m │
  └─────────────────┴──────────┴─────┘
  Test command received invalid input.
"
`;

exports[`conditions translation output for translateNetworkRequestCondition render errors url not matched 1`] = `
"Assert: Network request was made
           Exact URL: [32mhttp://suite.st/123[0m ([36mhttp://suite.st/<%var1%>[0m)
  Previously matched: [32mYes[0m
  
  Failing checks:
  ~ url: http://suite.st/123 (expected)
  × url: request was not made (actual)

"
`;

exports[`conditions translation output for translateNetworkRequestCondition render errors url not matched 2`] = `
"Assert: Network request was not made
        URL matching: [32m/partial/url/123[0m ([36m/partial/url/<%var1%>[0m)
  Previously matched: [32mNo[0m

  Network request properties
  ┌────────────────────────────────────────────────┬───────────┬────────────────────────────────────────────────────────────┐
  │ Request method                                 │ =         │ [32mGET[0m                                               │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Request header [32mAccept-Type[0m            │ contains  │ [32mtext/javascript[0m                                   │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Request body                                   │ =         │ [32mrequest val2 body[0m ([36mrequest <%var2%> body[0m) │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Response status                                │ >         │ [32m123[0m                                               │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Response header [32mContent-123[0m ([36mContent-<%var1%>[0m) │ ends with │ [32mval2/javascript[0m ([36m<%var2%>/javascript[0m)    │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Response body                                  │ =         │ [32mresponse <%non_existing_var%> <%kind-of|var but not%> body[0m │
  └────────────────────────────────────────────────┴───────────┴────────────────────────────────────────────────────────────┘
  
  Failing checks:
  ~ url: /partial/url/123 (expected)
  × url: request was not made (actual)

"
`;

exports[`conditions translation output for translateNetworkRequestCondition render without errors 1`] = `
"Assert: Network request was made
           Exact URL: [32mhttp://suite.st/123[0m ([36mhttp://suite.st/<%var1%>[0m)
  Previously matched: [32mYes[0m
"
`;

exports[`conditions translation output for translateNetworkRequestCondition render without errors 2`] = `
"Assert: Network request was not made
        URL matching: [32m/partial/url/123[0m ([36m/partial/url/<%var1%>[0m)
  Previously matched: [32mNo[0m

  Network request properties
  ┌────────────────────────────────────────────────┬───────────┬────────────────────────────────────────────────────────────┐
  │ Request method                                 │ =         │ [32mGET[0m                                               │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Request header [32mAccept-Type[0m            │ contains  │ [32mtext/javascript[0m                                   │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Request body                                   │ =         │ [32mrequest val2 body[0m ([36mrequest <%var2%> body[0m) │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Response status                                │ >         │ [32m123[0m                                               │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Response header [32mContent-123[0m ([36mContent-<%var1%>[0m) │ ends with │ [32mval2/javascript[0m ([36m<%var2%>/javascript[0m)    │
  ├────────────────────────────────────────────────┼───────────┼────────────────────────────────────────────────────────────┤
  │ Response body                                  │ =         │ [32mresponse <%non_existing_var%> <%kind-of|var but not%> body[0m │
  └────────────────────────────────────────────────┴───────────┴────────────────────────────────────────────────────────────┘
"
`;

exports[`conditions translation output for translatePSVideoCondition error rendering 1`] = `
"Assert: PlayStation 4 video had no error for any source
  Please make sure that you have the PlayStation SDK installed. https://suite.st/docs/troubleshooting/playstation/#playstation-sdk-not-installed
"
`;

exports[`conditions translation output for translatePSVideoCondition success rendering 1`] = `
"Assert: PlayStation 4 video had no error for current source
"
`;

exports[`conditions translation output for translatePSVideoCondition success rendering 2`] = `
"Assert: PlayStation 4 video had no error for any source
"
`;

exports[`conditions translation should translate "JavaScript expression ... equals ..." line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript expression",
        },
      ],
      "type": "code-block",
      "value": "someJS()",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Expression result",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "returned value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "JavaScript expression with variables ... equals ..." line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript expression",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"123\\")",
    },
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "With variables",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"<%var1%>\\")",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Expression result",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "returned value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "JavaScript expression",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video for current had no error" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "PlayStation 4 video had no error for current source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video had no error" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "PlayStation 4 video had no error for any source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "PS4 video has props" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "width",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "bold",
      "value": "PlayStation 4 video",
    },
    Object {
      "type": "text",
      "value": " properties",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "application has exited" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "Application has exited",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "cookie" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "my-cookie",
                },
                Object {
                  "type": "text",
                  "value": " cookie",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "!=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expect value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Cookie",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "current location" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Current location",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected value",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Current location",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... does not exist" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Element 1",
    },
    Object {
      "type": "text",
      "value": " does not exist",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... exist" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Element 1",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element ... is visible" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "My element",
    },
    Object {
      "type": "text",
      "value": " is visible",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS with vars" line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript matcher",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"123\\");",
    },
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "With variables",
        },
      ],
      "type": "code-block",
      "value": "someJS(\\"<%var1%>\\");",
    },
  ],
  "title": Array [
    Object {
      "type": "code",
      "value": "{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}",
    },
    Object {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element matches JS" line 1`] = `
Object {
  "children": Array [
    Object {
      "label": Array [
        Object {
          "type": "text",
          "value": "JavaScript matcher",
        },
      ],
      "type": "code-block",
      "value": "someJS();",
    },
  ],
  "title": Array [
    Object {
      "type": "code",
      "value": "{\\"css\\":\\".some.class\\",\\"xpath\\":\\"//div\\",\\"index\\":1}",
    },
    Object {
      "type": "text",
      "value": " matches JavaScript",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element properties" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "video position",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": ">=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "height",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123 ± 3v5",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "123 ± <%var3%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "text",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "expected text",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Unknown element (",
    },
    Object {
      "type": "code",
      "value": "unknown-id",
    },
    Object {
      "type": "text",
      "value": ") properties",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with legacy name exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Foo Bar",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with name hint exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "Foo Bar",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "element with single selector exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "code",
      "value": "#fooBar",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request matching URL was not made excluding previously matched" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "URL matching",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "/partial/url/123",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "/partial/url/<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Previously matched",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "No",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request method",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "GET",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request header ",
                },
                Object {
                  "type": "bold",
                  "value": "Accept-Type",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "contains",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "text/javascript",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Request body",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "request val2 body",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "request <%var2%> body",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response status",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": ">",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "123",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response header ",
                },
                Object {
                  "type": "bold",
                  "value": "Content-123",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "Content-<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "ends with",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "val2/javascript",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "<%var2%>/javascript",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Response body",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "=",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "response <%non_existing_var%> <%kind-of|var but not%> body",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": Array [
        Object {
          "type": "text",
          "value": "Network request properties",
        },
      ],
      "type": "table",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Network request was not made",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "network request to URL was made including matched" line 1`] = `
Object {
  "children": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Exact URL",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "http://suite.st/123",
                },
                Object {
                  "type": "text",
                  "value": " (",
                },
                Object {
                  "type": "code",
                  "value": "http://suite.st/<%var1%>",
                },
                Object {
                  "type": "text",
                  "value": ")",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
        Object {
          "children": Array [
            Object {
              "children": Array [
                Object {
                  "type": "text",
                  "value": "Previously matched",
                },
              ],
              "type": "cell",
            },
            Object {
              "children": Array [
                Object {
                  "type": "bold",
                  "value": "Yes",
                },
              ],
              "type": "cell",
            },
          ],
          "type": "row",
        },
      ],
      "label": undefined,
      "type": "dictionary",
    },
  ],
  "title": Array [
    Object {
      "type": "text",
      "value": "Network request was made",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "ps video had not error" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "text",
      "value": "PlayStation 4 video had no error for current source",
    },
  ],
  "type": "condition",
}
`;

exports[`conditions translation should translate "video exists" line 1`] = `
Object {
  "children": Array [],
  "title": Array [
    Object {
      "type": "bold",
      "value": "video",
    },
    Object {
      "type": "text",
      "value": " exists",
    },
  ],
  "type": "condition",
}
`;
